-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.9.4
-
None
Due to incomplete tags generated for the Qt documentation, I am trying to parse the generated HTML using Qt in order to extract additional tags so that my own generated documentation can link to Qt's. Unfortunately, this fails:
/usr/share/doc/qt5/qtcore/implicit-sharing.html:206:35: tag mismatch
This is due to the copyright footer, which contains invalid XHTML:
<p> <acronym title="Copyright">©</acronym> 2017 The Qt Company Ltd. Documentation contributions included herein are the copyrights of their respective owners.<br> The documentation provided herein is licensed under the terms of the <a href="http://www.gnu.org/licenses/fdl.html">GNU Free Documentation License version 1.3</a> as published by the Free Software Foundation.<br> Qt and respective logos are trademarks of The Qt Company Ltd. in Finland and/or other countries worldwide. All other trademarks are property of their respective owners. </p>
Specifically, the <br> should be <br/>.