Fix documentation generation for Qt5

Modify the logic to find and use the Qt documentation tag file to work
for Qt5 (currently assumes that we only care about QtCore). Add
work-around for https://bugreports.qt.io/browse/QTBUG-68459 so that we
can parse Qt5's documentation for supplemental tag extraction.